fix bugs and add extended tests for ex00-ex02
   Fix ClapTrap default _damage (10 -> 0), FragTrap stats copy-paste bug
   (50ep/20dmg -> 100ep/30dmg), ClapTrap copy constructor missing message,
   and default constructor missing space. Add attack() overrides to ScavTrap
   and FragTrap. Replace minimal mains with comprehensive tests covering OCF,
   energy depletion, death edge cases, construction chaining, and combat.

--- a/cpp03/ex00/Makefile
+++ b/cpp03/ex00/Makefile
@@ -1,8 +1,8 @@
-CFLAGS = -ggdb -Wall -Wextra -Werror -std=c++98
-CC = g++
+CFLAGS = -Wall -Wextra -Werror -std=c++98
+CC = c++
 
 TARGET = ClapTrap
-SOURCE = $(wildcard *.cpp)
+SOURCE = ClapTrap.cpp main.cpp
 OBJS := $(SOURCE:.cpp=.o)
 
 .PHONY: all
@@ -22,7 +22,5 @@ clean:
 fclean: clean
 	rm -f $(TARGET)
 
-
 .PHONY: re
 re: clean all
-
